--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,24 +1,3 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
   nav:
     home: "Home"
@@ -29,3 +8,31 @@ en:
     terms: "Terms"
     categories: "Categories"
     signup: "Sign up"
+  activerecord:
+    models:
+      user: "User"
+    attributes:
+      user:
+        email: "Email address"
+        password: "Password"
+        password_confirmation: "Confirmation"
+        name: "Name"
+    errors:
+      models:
+        user: 
+          attributes:
+            name:
+              blank: "cannot be blank."
+            email:
+              blank: "cannot be blank."
+              invalid: "is invalid."
+            password:
+              blank: "cannot be blank."
+              too_short: "is too short (minimum is %{count} characters)."
+  form:
+    user_create_success: "User was successfully created."
+  button:
+    create_account: "Create account"
+  form_has_x_errors:
+    one: "The form contains %{count} error."
+    other: "The form contains %{count} errores."
