added categories and imrpoved concepts

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,7 +6,7 @@ en:
     help: "Help"
     contact: "Contact"
     contact_us: "Contact us"
-    terms: "Terms"
+    concepts: "Concepts"
     categories: "Categories"
     signup: "Sign up"
     signup_now: "Sign up now!"
