--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -6,7 +6,7 @@ es:
     help: "Ayuda"
     contact: "Contactar"
     contact_us: "Contáctenos"
-    terms: "Términos"
+    concepts: "Conceptos"
     categories: "Categorías"
     signup: "Registrar"
     signup_now: "¡Regístrese ahora!"
