changed some assoc types and added some extra models

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,7 @@ en:
     contact_us: "Contact us"
     concepts: "Concepts"
     categories: "Categories"
+    vocabularies: "Vocabularies"
     signup: "Sign up"
     signup_now: "Sign up now!"
     signin: "Sign in / register"
